# vocab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: plan.md
src/vocab/: __init__.py  anki.py  artifacts.py  cli.py  dictionary.py  epub.py  filtering.py  media_cache.py  models.py  pipeline.py  sentences.py  tokens.py  vocabulary.py
tests/: conftest.py  test_anki.py  test_artifacts.py  test_cli.py  test_dictionary.py  test_epub.py  test_filtering.py  test_media_cache.py  test_pipeline.py  test_sentences.py  test_tokens.py  test_vocabulary.py
