[project]
name = "vocab"
version = "0.1.0"
description = "Vocabulary from ePubs"
readme = "README.md"
authors = [
    { name = "Jesus Lopez", email = "jesus@jesusla.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
